tests/NormalTests/paczka1/fuzzy1/42231279.err
Error in line 6: qtrri5P S902 75,2
Error in line 9: mpEf3wJ A958 44,70
Error in line 4: mpEf3wJ A958 16,0
Error in line 10: mpEf3wJ S310 47,7
Error in line 14: 1bB S902 74,31
Error in line 20: X5XGc3s A958 -2,4
Error in line 22: hKoBTimSY9 S902 27,5
Error in line 29: QnuEJSBVix A343 ~6,0
Error in line 30: 1bB S902 -2,5
Error in line 33: mpEf3wJ S310 3,6
